# internal/dto/models.gen.go
@@ -68,3 +68,6 @@ type SubmitDocumentJSONRequestBody = Document
 
 // CreateRecipeJSONRequestBody defines body for CreateRecipe for application/json ContentType.
 type CreateRecipeJSONRequestBody = RecipeRequest
+
+// UpdateRecipeJSONRequestBody defines body for UpdateRecipe for application/json ContentType.
+type UpdateRecipeJSONRequestBody = RecipeRequest
